--- a/public/Admin Panel/desc.html
+++ b/public/Admin Panel/desc.html
@@ -64,10 +64,9 @@
                         <div class="card-body">
                             <form action="">
                                 <input type="text" name="" id="desc" placeholder="Enter Your Description Heading">
-                                <textarea type="datetime-local" row="30" cols="10" name="" id="date"
+                                <textarea type="datetime-local" row="30" cols="10" name="" id="paradesc"
                                     placeholder="Enter Your Class Description Paragraph"></textarea>
-                                <input type="datetime-local" name="" id="paradesc"
-                                    placeholder="Enter Your Description Paragraph">
+                                <input type="datetime-local" name="" id="date">
                                 <input type="file" id="file">
                                 <button onclick="return sendDescription()">Send Description</button>
                             </form>
