--- a/public/Home/home.html
+++ b/public/Home/home.html
@@ -217,44 +217,52 @@
         </p>
       </div>
     </div>
-    <div id="course"></div>
     <h1 class="heading">Courses We Offer</h1>
-    <div class="courses-offer">
-      <div class="course">
-        <h1>Basic Training</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus recusandae reiciendis suscipit,
-          repellendus blanditiis libero maxime, soluta ni</p>
-        <button>Enroll Now</button>
+    <div class="card-big">
+      <div class="card">
+        <div class="imgbox">
+          <img
+            src="https://images.pexels.com/photos/1815257/pexels-photo-1815257.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+          />
+        </div>
+  
+        <div class="content">
+          <h2>keep Smiling</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+            doloribus vitae fugit enim repudiandae
+          </p>
+        </div>
       </div>
-      <div class="course">
-        <h1>Intermidiate Level</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus recusandae reiciendis suscipit,
-          repellendus blanditiis libero maxime, soluta ni</p>
-        <button>Enroll Now</button>
+      <div class="card">
+        <div class="imgbox">
+          <img
+            src="https://images.pexels.com/photos/1815257/pexels-photo-1815257.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+          />
+        </div>
+  
+        <div class="content">
+          <h2>keep Smiling</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+            doloribus vitae fugit enim repudiandae
+          </p>
+        </div>
       </div>
-      <div class="course">
-        <h1>Advance Level</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus recusandae reiciendis suscipit,
-          repellendus blanditiis libero maxime, soluta ni</p>
-        <button>Enroll Now</button>
-      </div>
-      <div class="course">
-        <h1>IELTS Training</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus recusandae reiciendis suscipit,
-          repellendus blanditiis libero maxime, soluta ni</p>
-        <button>Enroll Now</button>
-      </div>
-      <div class="course">
-        <h1>TESOL</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus recusandae reiciendis suscipit,
-          repellendus blanditiis libero maxime, soluta ni</p>
-        <button>Enroll Now</button>
-      </div>
-      <div class="course">
-        <h1>TEFl</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus recusandae reiciendis suscipit,
-          repellendus blanditiis libero maxime, soluta ni</p>
-        <button>Enroll Now</button>
+      <div class="card">
+        <div class="imgbox">
+          <img
+            src="https://images.pexels.com/photos/1815257/pexels-photo-1815257.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+          />
+        </div>
+  
+        <div class="content">
+          <h2>keep Smiling</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+            doloribus vitae fugit enim repudiandae
+          </p>
+        </div>
       </div>
     </div>
 
@@ -300,10 +308,13 @@
                   <div class="testimonial">
                     <div class="tes-col">
                       <div class="name">Sir Ahmer</div>
-                      <p> Hi,  everyone, I'm your ESL  Teacher SYED TARIQUE AHMED! I'm here to help you develop your English speaking skills. Guaranteed, that I will be of great assistance. I'll make our class as lively as possible.
+                      <p> Hi, everyone, I'm your ESL Teacher SYED TARIQUE AHMED! I'm here to help you develop your
+                        English speaking skills. Guaranteed, that I will be of great assistance. I'll make our class as
+                        lively as possible.
                         I have done my masters degree in TEFL ( teaching of English as a foreign language).
                         I have been teaching English successfully for 15 years.
-                        During COVID-19 , I started teaching English online before I had been teaching in my own English language centre named Pak American communicate centre.   </p>
+                        During COVID-19 , I started teaching English online before I had been teaching in my own English
+                        language centre named Pak American communicate centre. </p>
                       <div class="star">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -372,47 +383,7 @@
       </button>
     </div>
   </div>
-  <div class="heading">
-    <h1>Our Services</h1>
-  </div>
-  <div class="services">
-    <div class="services-child">
-      <h1>Brand Story</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos quibusdam corporis labore iure accusantium
-        praesentium maxime officiis animi iusto, repellat impedit sit deserunt a magni aut ut molestiae, aliquam
-        ducimus!</p>
-    </div>
-    <div class="services-child">
-      <h1>Content Strategy</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos quibusdam corporis labore iure accusantium
-        praesentium maxime officiis animi iusto, repellat impedit sit deserunt a magni aut ut molestiae, aliquam
-        ducimus!</p>
-    </div>
-    <div class="services-child">
-      <h1>UX Strategy</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos quibusdam corporis labore iure accusantium
-        praesentium maxime officiis animi iusto, repellat impedit sit deserunt a magni aut ut molestiae, aliquam
-        ducimus!</p>
-    </div>
-    <div class="services-child">
-      <h1>Visual Design</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos quibusdam corporis labore iure accusantium
-        praesentium maxime officiis animi iusto, repellat impedit sit deserunt a magni aut ut molestiae, aliquam
-        ducimus!</p>
-    </div>
-    <div class="services-child">
-      <h1>UI / UX Design</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos quibusdam corporis labore iure accusantium
-        praesentium maxime officiis animi iusto, repellat impedit sit deserunt a magni aut ut molestiae, aliquam
-        ducimus!</p>
-    </div>
-    <div class="services-child">
-      <h1>Devolopment</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos quibusdam corporis labore iure accusantium
-        praesentium maxime officiis animi iusto, repellat impedit sit deserunt a magni aut ut molestiae, aliquam
-        ducimus!</p>
-    </div>
-  </div>
+
   <h1 class="price-head" id="pricing">
     Choose your Plan
   </h1>
