--- a/public/Admin Panel/desc.html
+++ b/public/Admin Panel/desc.html
@@ -63,12 +63,11 @@
                         </div>
                         <div class="card-body">
                             <form action="">
-                                <input type="text" name="" id="desc" placeholder="Enter Your Description Heading">
-                                <textarea type="datetime-local" row="30" cols="10" name="" id="paradesc"
+                                <input   class="inputBox" type="text" name="" id="desc" placeholder="Enter Your Description Heading">
+                                <textarea  class="inputBox" type="datetime-local" row="30" cols="10" name="" id="paradesc"
                                     placeholder="Enter Your Class Description Paragraph"></textarea>
-                                <input type="datetime-local" name="" id="date">
-                                <input type="file" id="file">
-                                <button onclick="return sendDescription()">Send Description</button>
+                                <input class="inputBox"  type="datetime-local" name="" id="date">
+                                <button onclick="return sendDescription()" class="button">Send Description</button>
                             </form>
                         </div>
                     </div>
