--- a/public/Admin Panel/student.html
+++ b/public/Admin Panel/student.html
@@ -26,6 +26,7 @@
                     <li><a href="./index.html"><span class="las la-igloo"></span>Dashboard<span></span></a></li>
                     <li><a href="#" class="active"><span class="las la-users"></span>Students<span></span></a></li>
                     <li><a href="./desc.html"><i class="fa-solid fa-paper-plane"></i>Description<span></span></a></li>
+                    <li><a href="./teachers.html" class="active"><span class="las la-users"></span>Teachers<span></span></a></li>
                 </ul>
             </div>
         </div>
