--- a/public/Home/home.html
+++ b/public/Home/home.html
@@ -36,6 +36,7 @@
         </ul>
       </div>
       <div class="buttons">
+        <a href="./teachers.html">Be A Teacher</a>
         <a href="../Register/register.html">Admisson</a>
       </div>
       <div class="user">
