--- a/public/Register/register.html
+++ b/public/Register/register.html
@@ -89,49 +89,27 @@
         <img src="./images/register.svg" alt="">
     </div>
     <footer>
-        <div class="footer-container">
-          <div class="sec aboutus">
-            <h2>About Us</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio eius placeat deleniti, neque soluta rem ipsa
-              nemo unde ut perferendis tempora velit fugiat praesentium, nostrum obcaecati, repellendus architecto quisquam.
-              Suscipit.</p>
-            <ul class="sci">
-              <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-              <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-              <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
-            </ul>
-          </div>
-          <div class="sec quickLinks">
-            <h2>Quick Links</h2>
-            <ul>
-              <li><a href="#">About</a></li>
-              <li><a href="#">FAQ</a></li>
-              <li><a href="#">Privacy Policy</a></li>
-              <li><a href="#">Help</a></li>
-              <li><a href="#">Terms & Condition</a></li>
-              <li><a href="#">Contact</a></li>
-            </ul>
-          </div>
-          <div class="sec contacting">
-            <h2>Connect</h2>
-            <ul class="info">
-              <li>
-                <span><i class="fa-solid fa-phone"></i></span>
-                <span><a href="tel: 03456276164"> 123-456-789</a></span>
-              </li>
-              <li>
-                <span><i class="fa-solid fa-map"></i></span>
-                <span>123 Anywhere St.,<br /> Any City , ST 12345</span>
-              </li>
-              <li>
-                <span><i class="fa-solid fa-envelope"></i></span>
-                <span>hello@reallygreatsite.com</span>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </footer>
+      <div class="waves">
+        <div class="wave" id="wave1"></div>
+        <div class="wave" id="wave2"></div>
+        <div class="wave" id="wave3"></div>
+        <div class="wave" id="wave4"></div>
+      </div>
+      <ul class="social-icons">
+        <li><a href="https://www.facebook.com"><i class="fa-brands fa-facebook"></i></a></li>
+        <li><a href="https://www.facebook.com"><i class="fa-brands fa-instagram"></i></a></li>
+        <li><a href="https://www.facebook.com"><i class="fa-brands fa-twitter"></i></a></li>
+        <li><a href="https://www.facebook.com"><i class="fa-brands fa-linkedin"></i></a></li>
+      </ul>
+      <ul class="footer-menu">
+        <li><a href="">HOME</a></li>
+        <li><a href="">COURSES</a></li>
+        <li><a href="">PRICING</a></li>
+        <li><a href="">TEACHERS</a></li>
+      </ul>
+      <p>&copy; 2023 SyedTariqAhmed | All Right Reserved</p>
+    </footer>
+  
     <script src="./script.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
