--- a/public/Admin Panel/index.html
+++ b/public/Admin Panel/index.html
@@ -10,11 +10,11 @@
         href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" hr ef="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-    integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-    integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -27,6 +27,7 @@
                                 class="las la-igloo"></span>Dashboard<span></span></a></li>
                     <li><a href="./student.html"><span class="las la-users"></span>Students<span></span></a></li>
                     <li><a href="./desc.html"><i class="fa-solid fa-paper-plane"></i>Description<span></span></a></li>
+                    <li><a href="./teachers.html"><span class="las la-users"></span>Teachers<span></span></a></li>
                 </ul>
             </div>
         </div>
@@ -61,19 +62,19 @@
                             <h2>Recents User</h2>
                         </div>
                         <div class="card-body">
-                            <table width="100%" >
+                            <table width="100%">
                                 <thead>
                                     <tr>
-                                    <td>Sn.o</td>
-                                    <td>Username </td>
-                                    <td>Email</td>
-                                    <td>Contact </td>
-                                    <td>Delete</td>
-                                    <td>Update</td>
-                                </tr>
-                            </thead>
+                                        <td>Sn.o</td>
+                                        <td>Username </td>
+                                        <td>Email</td>
+                                        <td>Contact </td>
+                                        <td>Delete</td>
+                                        <td>Update</td>
+                                    </tr>
+                                </thead>
                                 <tbody id="showdata">
-                                    
+
                                 </tbody>
                             </table>
                         </div>
@@ -84,7 +85,7 @@
     </div>
     </div>
     <script src="./admin-script.js"></script>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </body>
 
