--- a/public/Admin Panel/teachers.html
+++ b/public/Admin Panel/teachers.html
@@ -27,6 +27,7 @@
                     <li><a href="./student.html"><span class="las la-users"></span>Students<span></span></a></li>
                     <li><a href="./desc.html"><i class="fa-solid fa-paper-plane"></i>Description<span></span></a></li>
                     <li><a href="#" class="active"><span class="las la-users"></span>Teachers<span></span></a></li>
+                    <li><a href="./cotact.html" class=""><span class="las la-users"></span>Contact<span></span></a></li>
                 </ul>
             </div>
         </div>
