--- a/public/Home/home.html
+++ b/public/Home/home.html
@@ -279,7 +279,11 @@
                 </div>
                 <div class="border-radiuse-2">
                   <div class="blue-top"></div>
-                  <div class="white-top"></div>
+                  <div class="white-top">
+                    <h1>
+                      Daily Quote
+                    </h1>
+                  </div>
                 </div>
                 <div class="content-of-description">
                   <i class="fa-solid fa-quote-left"></i>
@@ -540,19 +544,15 @@
             <span>First Name</span>
           </div>
           <div class="inputBx w50">
-            <input type="text" id="name" required>
+            <input type="text" id="last" required>
             <span>Last Name</span>
           </div>
           <div class="inputBx w50">
-            <input type="text" id="name" required>
+            <input type="text" id="email" required>
             <span>Email Address</span>
           </div>
-          <div class="inputBx w50">
-            <input type="text" id="name" required>
-            <span>Mobile Number</span>
-          </div>
           <div class="inputBx w100">
-            <textarea type="text" id="name" required></textarea>
+            <textarea type="text" id="mesgae" required></textarea>
             <span>Message</span>
           </div>
           <div class="inputBx w100">
