--- a/public/Admin Panel/index.html
+++ b/public/Admin Panel/index.html
@@ -28,6 +28,7 @@
                     <li><a href="./student.html"><span class="las la-users"></span>Students<span></span></a></li>
                     <li><a href="./desc.html"><i class="fa-solid fa-paper-plane"></i>Description<span></span></a></li>
                     <li><a href="./teachers.html"><span class="las la-users"></span>Teachers<span></span></a></li>
+                    <li><a href="./cotact.html" ><span class="las la-users"></span>Contact<span></span></a></li>
                 </ul>
             </div>
         </div>
