--- a/public/index.html
+++ b/public/index.html
@@ -94,9 +94,11 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+
   <div class="course-heading" id="course">
     <h1>Our Best Courses</h1>
   </div>
+
   <section class="courses">
 
     <div class="course-card">
@@ -139,6 +141,7 @@
         Be next</p>
     </div>
   </section>
+
   <section class="teachers" id="teacher">
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
       <h1 class="teachers-heading">Our Best Teachers</h1>
@@ -235,9 +238,28 @@
   </section>
 
   <h1 class="testimonial-heading">Our Testimonial</h1>
+
   <section class="testimonail">
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <div class="testimonialBox">
+            <i class="fa-solid fa-quote-left quote"></i>
+            <div class="testimonial-content">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At ipsa quos nemo! Neque enim repudiandae
+                minus
+                praesentium, culpa nobis cum. Soluta, architecto, dicta praesentium similique maxime itaque, quidem
+                dolores inventore officia deserunt quas culpa.</p>
+              <div class="detail">
+                <div class="imgBx">
+                  <img src="./images/3.jpg">
+                </div>
+                <h3>Someone Famoys<br /><span>Creatrive </span></h3>
+              </div>
+            </div>
+
+          </div>
+        </div>
         <div class="swiper-slide">
           <div class="testimonialBox">
             <i class="fa-solid fa-quote-left quote"></i>
@@ -351,6 +373,7 @@
       <div class="swiper-pagination"></div>
     </div>
   </section>
+
   <div class="contact-section">
     <section class="contact">
       <div class="contactinfo">
@@ -361,11 +384,14 @@
               <span>2913 Islamabad Road
                 , Los Sentos,
                 CA
-              </span></li>
+              </span>
+            </li>
             <li><span><i class="fa-solid fa-envelope"></i></span>
-              <span>syedtariqahmed@gmail.com</span></li>
+              <span>syedtariqahmed@gmail.com</span>
+            </li>
             <li><span><i class="fa-solid fa-phone"></i></span>
-              <span>03456276164</span></li>
+              <span>03456276164</span>
+            </li>
           </ul>
         </div>
         <ul class="sci">
@@ -406,6 +432,7 @@
       </div>
     </section>
   </div>
+
   <footer>
     <div class="waves">
       <div class="wave" id="wave1"></div>
@@ -428,31 +455,15 @@
     <p>&copy; 2023 SyedTariqAhmed | All Right Reserved</p>
   </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 </body>
-<script>
-  var swiper = new Swiper(".mySwiper", {
-    effect: "coverflow",
-    grabCursor: true,
-    centeredSlides: true,
-    slidesPerView: "auto",
-    coverflowEffect: {
-      rotate: 0,
-      stretch: 0,
-      depth: 100,
-      modifier: 2,
-      slideShadows: true,
-    },
-    loop: true
-  });
-</script>
-<script src="./script.js">
-</script>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
   integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
   integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+<script src="./script.js"></script>
 
 </html>
